--- a/src/python/python.html
+++ b/src/python/python.html
@@ -463,7 +463,7 @@ listeDeJour = ["lundi", "mardi", "mercredi", "jeudi", "vendredi", "samedi", "dim
                 <h2>Fin</h2>
                 <p>
                     Vous êtes arrivé à la fin de l'initiation à la programmation !<br>
-                    Si vous pensez maîtriser ces notions de bases vous pouvez passer à la suite <a href="./git.html">ici</a>, ou continuer à vous entraîner.<br>
+                    Si vous pensez maîtriser ces notions de bases vous pouvez passer à la suite <a href="../base/unix.html">ici</a>, ou continuer à vous entraîner.<br>
                 </p>
             </div>
         </div>
