--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <div class="bg-light p-5 rounded row">
             <div class="col-sm-8 mx-auto">
                 <h1>Ce site est en cours de "codage" et est donc drastiquement incomplet</h1>
+                <h1>Même les parties déjà écrites sont sujette à changement, car principalement là pour structurer le site, mais incomplète en informations</h1>
                 <h1>Pensez à revenir plus tard, si vous êtes intéressé</h1><br><br>
                 <h2>Introduction</h2>
                 <p>
