--- a/Informatique/src/base/python.html
+++ b/Informatique/src/base/python.html
@@ -12,7 +12,7 @@
     <!-- Bootstrap core CSS
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     -->
-    <link href="../../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../../assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Icone -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon2.ico" />
@@ -24,7 +24,7 @@
 
 
     <!-- Custom styles for this template -->
-    <link href="../../assets/navbar.css" rel="stylesheet">
+    <link href="../../../assets/navbar.css" rel="stylesheet">
 </head>
 <body>
 
@@ -367,7 +367,7 @@
 
 </main>
 
-<script src="../../assets/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../../../assets/dist/js/bootstrap.bundle.min.js"></script>
 <!---
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
