--- a/Informatique/src/plus_avance/semaphore.html
+++ b/Informatique/src/plus_avance/semaphore.html
@@ -39,12 +39,13 @@
                     <a class="nav-link" aria-current="page" href="../../index.html">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../python/python.html">Algorithmie</a>
+                    <a class="nav-link" href="../dico/index.html">Dictionnaire</a>
                 </li>
                 <!-- BASE -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" >Base</a>
                     <ul class="dropdown-menu" >
+                        <li><a class="dropdown-item" href="../base/python.html">Algorithme & Python</a></li>
                         <li><a class="dropdown-item" href="../base/unix.html">Unix de base</a></li>
                         <li><a class="dropdown-item" href="../base/c.html">C</a></li>
                         <li><a class="dropdown-item" href="../base/git.html">Git & utilitaires</a></li>
@@ -61,10 +62,6 @@
                         <li><a class="dropdown-item">AUTRE</a></li>
                         <li><a class="dropdown-item" href="./unity.html">Unity</a></li>
                     </ul>
-                </li>
-                <!--Dico-->
-                <li class="nav-item">
-                    <a class="nav-link" href="../dico/index.html">Dictionnaire</a>
                 </li>
             </ul>
         </div>
