fin creation musique

--- a/Musique/index.html
+++ b/Musique/index.html
@@ -71,12 +71,13 @@
                 <ul>
                     <li><a href="https://www.youtube.com/watch?v=fJ9rUzIMcZQ">Queens</a></li>
                     <li><a href="https://www.youtube.com/watch?v=1UUYjd2rjsE">Scorpions</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=BciS5krYL80">Eagles</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=5IpYOF4Hi6Q">PinkFloyd</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=9jK-NcRmVcw">Europe</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=FTQbiNvZqaY">Toto</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=gEPmA3USJdI">AC/DC</a></li>
                     <li><a href="https://www.youtube.com/watch?v=xwtdhWltSIg">R.E.M.</a></li>
                     <li><a href="https://www.youtube.com/watch?v=XEjLoHdbVeE">ABBA</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=gEPmA3USJdI">ACDC</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=BciS5krYL80">Eagles</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=9jK-NcRmVcw">Europe</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=5IpYOF4Hi6Q">PinkFloyd</a></li>
                 </ul>
             </div>
         </div>
@@ -89,14 +90,14 @@
             <div class="col-sm-8 mx-auto">
                 <h1 id="RockN">Rock (New)</h1>
                 <ul>
-                    <li><a href="#">Phil Collins</a></li>
                     <li><a href="https://www.youtube.com/watch?v=kXYiU_JCYtU">Linkin Park</a></li>
-                    <li><a href="#">Bonnie Tyler</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=ktvTqknDobU">Imagine Dragons</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=IeDMnyQzS88">Phil Collins</a></li>
                     <li><a href="https://www.youtube.com/watch?v=NAEppFUWLfc">Simon & Garfunkel</a></li>
                     <li><a href="https://www.youtube.com/watch?v=6Ejga4kJUts">cranberries</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=ktvTqknDobU">Imagine Dragons</a></li>
-                    <li><a href="#">Survivor</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=btPJPFnesV4">Survivor</a></li>
                     <li><a href="https://www.youtube.com/watch?v=i7fnlJ60RO8">David Glen Eisley</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=lcOxhH8N3Bo">Bonnie Tyler</a></li>
                 </ul>
             </div>
         </div>
@@ -109,17 +110,17 @@
             <div class="col-sm-8 mx-auto">
                 <h1 id="Metal">Métal</h1>
                 <ul>
-                    <li><a href="https://www.youtube.com/watch?v=di1XUB0YIzw">Jonathan Young</a></li>
                     <li><a href="https://www.youtube.com/watch?v=Rjp_DfvJimg">NightWish</a></li>
                     <li><a href="https://www.youtube.com/watch?v=oVWEb-At8yc">Sabaton</a></li>
                     <li><a href="https://www.youtube.com/watch?v=FhBnW7bZHEE">IronMaiden</a></li>
                     <li><a href="https://www.youtube.com/watch?v=N6k8BBU8_Go">PowerWolf</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=c8XdrOhEZl0">Epica</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=JzPUBTR4L_4">Amaranthe</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=_hzssKb9940">Battle Beast</a></li>
                     <li><a href="https://www.youtube.com/watch?v=U5HAEzEk8QM">Rammstein</a></li>
                     <li><a href="https://www.youtube.com/watch?v=u9Dg-g7t2l4">Disturbed</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=di1XUB0YIzw">Jonathan Young</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=JzPUBTR4L_4">Amaranthe</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=c8XdrOhEZl0">Epica</a></li>
                     <li><a href="https://www.youtube.com/watch?v=0jgrCKhxE1s">DragonForce</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=_hzssKb9940">Battle Beast</a></li>
                 </ul>
             </div>
         </div>
@@ -132,21 +133,21 @@
             <div class="col-sm-8 mx-auto">
                 <h1 id="Fr">Francophonie</h1>
                 <ul>
+                    <li><a href="https://www.youtube.com/watch?v=s3O1Xro7oAI">Johnny Hallyday</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=aIbsrEyWddk">Lara Fabian</a></li>
                     <li><a href="https://www.youtube.com/watch?v=urWV2OjAmUQ">Daniel Belavoine</a></li>
                     <li><a href="https://www.youtube.com/watch?v=bpEmjxobvbY">Michel Sardou</a></li>
                     <li><a href="https://www.youtube.com/watch?v=aKkvU_NnPhg">Francis Cabrel</a></li>
                     <li><a href="https://www.youtube.com/watch?v=oltptNDHocw">Jean-Jacques Goldman</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=s3O1Xro7oAI">Johnny Hallyday</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=aIbsrEyWddk">Lara Fabian</a></li>
                     <li><a href="https://www.youtube.com/watch?v=80hMEKlLVgQ">Manau</a></li>
                     <li><a href="https://www.youtube.com/watch?v=jTuBnZrLbq0">Nolwenn Leroy</a></li>
                     <li><a href="https://www.youtube.com/watch?v=Unj9WbeLzRU">Barbara Pravi</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=gzlHucbD76U">Khaled</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=oiKj0Z_Xnjc">Stromae</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=voQhp1K2TSk">Trois Cafés Gourmands</a></li>
                     <li><a href="https://www.youtube.com/watch?v=Pa5ASp_EA-0">Marie Myriam</a></li>
                     <li><a href="https://www.youtube.com/watch?v=4heMfS5jTxY">Barbara</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=voQhp1K2TSk">Trois Cafés Gourmands</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=gzlHucbD76U">Khaled</a></li>
                     <li><a href="https://www.youtube.com/watch?v=M7X6oYg6iro">Indochine</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=oiKj0Z_Xnjc">Stromae</a></li>
                 </ul>
             </div>
         </div>
@@ -159,15 +160,15 @@
             <div class="col-sm-8 mx-auto">
                 <h1 id="Pop">Pop</h1>
                 <ul>
-                    <li><a href="https://www.youtube.com/watch?v=A_MjCqQoLLA">Beatles</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=MpDM6ygsb20">Stevie Wonder</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=450p7goxZqg">John Legend</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=mWQACEqf4QY">Sia</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=rYEDA3JcQqw">Adele</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=Zi_XLOBDo_Y">Michael Jean</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=Zi_XLOBDo_Y">Michael Jackson</a></li>
                     <li><a href="https://www.youtube.com/watch?v=8v_4O44sfjM">Christina Perri</a></li>
                     <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Rick Astley</a></li>
                     <li><a href="https://www.youtube.com/watch?v=QGJuMBdaqIw">katy perry</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=450p7goxZqg">John Legend</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=mWQACEqf4QY">Sia</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=rYEDA3JcQqw">Adele</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=MpDM6ygsb20">Stevie Wonder</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=A_MjCqQoLLA">Beatles</a></li>
                     <li><a href="https://www.youtube.com/watch?v=TV6WWT3zCEc">Leka</a></li>
                 </ul>
             </div>
@@ -237,6 +238,7 @@
                 <ul>
                     <li><a href="https://www.youtube.com/watch?v=XXidBV1H-H4">Bella Ciao</a></li>
                     <li><a href="https://www.youtube.com/watch?v=cWc7vYjgnTs">Luciano Pavarotti</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=CNHL66K8S2I">Andrea Bocelli</a></li>
                     <li><a href="https://www.youtube.com/watch?v=bCSqkN9N3tg">Miami</a></li>
                 </ul>
             </div>
