--- a/Musique/index.html
+++ b/Musique/index.html
@@ -46,7 +46,7 @@
                     <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" >Style</a>
                     <ul class="dropdown-menu" >
                         <li><a class="dropdown-item" href="#RockC">Rock (Classique)</a></li>
-                        <li><a class="dropdown-item" href="#RockN">Rock (New)</a></li>
+                        <li><a class="dropdown-item" href="#RockN">Rock</a></li>
                         <li><a class="dropdown-item" href="#Metal">Métal</a></li>
                         <li><a class="dropdown-item" href="#Fr">Francophonie</a></li>
                         <li><a class="dropdown-item" href="#Pop">Pop</a></li>
@@ -88,13 +88,13 @@
     <div class="container">
         <div class="bg-light p-5 rounded row">
             <div class="col-sm-8 mx-auto">
-                <h1 id="RockN">Rock (New)</h1>
+                <h1 id="RockN">Rock</h1>
                 <ul>
                     <li><a href="https://www.youtube.com/watch?v=kXYiU_JCYtU">Linkin Park</a></li>
                     <li><a href="https://www.youtube.com/watch?v=ktvTqknDobU">Imagine Dragons</a></li>
                     <li><a href="https://www.youtube.com/watch?v=IeDMnyQzS88">Phil Collins</a></li>
                     <li><a href="https://www.youtube.com/watch?v=NAEppFUWLfc">Simon & Garfunkel</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=6Ejga4kJUts">cranberries</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=6Ejga4kJUts">Cranberries</a></li>
                     <li><a href="https://www.youtube.com/watch?v=btPJPFnesV4">Survivor</a></li>
                     <li><a href="https://www.youtube.com/watch?v=i7fnlJ60RO8">David Glen Eisley</a></li>
                     <li><a href="https://www.youtube.com/watch?v=lcOxhH8N3Bo">Bonnie Tyler</a></li>
@@ -135,7 +135,7 @@
                 <ul>
                     <li><a href="https://www.youtube.com/watch?v=s3O1Xro7oAI">Johnny Hallyday</a></li>
                     <li><a href="https://www.youtube.com/watch?v=aIbsrEyWddk">Lara Fabian</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=urWV2OjAmUQ">Daniel Belavoine</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=urWV2OjAmUQ">Daniel Balavoine</a></li>
                     <li><a href="https://www.youtube.com/watch?v=bpEmjxobvbY">Michel Sardou</a></li>
                     <li><a href="https://www.youtube.com/watch?v=aKkvU_NnPhg">Francis Cabrel</a></li>
                     <li><a href="https://www.youtube.com/watch?v=oltptNDHocw">Jean-Jacques Goldman</a></li>
@@ -163,7 +163,7 @@
                     <li><a href="https://www.youtube.com/watch?v=Zi_XLOBDo_Y">Michael Jackson</a></li>
                     <li><a href="https://www.youtube.com/watch?v=8v_4O44sfjM">Christina Perri</a></li>
                     <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Rick Astley</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=QGJuMBdaqIw">katy perry</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=QGJuMBdaqIw">Katy Perry</a></li>
                     <li><a href="https://www.youtube.com/watch?v=450p7goxZqg">John Legend</a></li>
                     <li><a href="https://www.youtube.com/watch?v=mWQACEqf4QY">Sia</a></li>
                     <li><a href="https://www.youtube.com/watch?v=rYEDA3JcQqw">Adele</a></li>
