--- a/Musique/musiques.html
+++ b/Musique/musiques.html
@@ -5,25 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Tuto Programmation">
     <meta name="author" content="Bastien Picco">
-    <title>Musique</title>
+    <title>Musiques</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/navbars/">
 
-    <!-- Bootstrap core CSS
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    -->
     <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Icone -->
-    <link rel="shortcut icon" type="image/x-icon" href="favicon2.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="musique.ico" />
 
-    <!-- Style -->
-    <style>
-      a {
-        text-decoration: none;
-        color: inherit;
-      }
-    </style>
 
 
     <!-- Custom styles for this template -->
@@ -39,24 +29,9 @@
         <div class="collapse navbar-collapse" id="monNavbar">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Accueil</a>
+                    <a class="nav-link active" aria-current="page" href="./musiques.html">Accueil</a>
                 </li>
                 <!-- BASE -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" >Style</a>
-                    <ul class="dropdown-menu" >
-                        <li><a class="dropdown-item" href="#RockC">Rock (Classique)</a></li>
-                        <li><a class="dropdown-item" href="#RockN">Rock</a></li>
-                        <li><a class="dropdown-item" href="#Metal">Métal</a></li>
-                        <li><a class="dropdown-item" href="#Fr">Francophonie</a></li>
-                        <li><a class="dropdown-item" href="#Pop">Pop</a></li>
-                        <li><a class="dropdown-item" href="#Yt">Youtube</a></li>
-                        <li><a class="dropdown-item" href="#JV">Jeux Vidéos / Films</a></li>
-                        <li><a class="dropdown-item" href="#Pop">Musique</a></li>
-                        <li><a class="dropdown-item" href="#Italien">Italien</a></li>
-                        <li><a class="dropdown-item" href="#Rap">Rap</a></li>
-                    </ul>
-                </li>
             </ul>
         </div>
     </div>
