--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" >Sections</a>
                     <ul class="dropdown-menu" >
-                        <li><a class="dropdown-item" href="./Musique/index.html">Musiques</a></li>
+                        <li><a class="dropdown-item" href="./Musique/musiques.html">Musiques</a></li>
                         <li><a class="dropdown-item" href="./Informatique/index.html">Informatiques</a></li>
                     </ul>
                 </li>
