--- a/Musique/musiques.html
+++ b/Musique/musiques.html
@@ -38,16 +38,22 @@
 </nav>
 
 <!-- Main -->
-<main>
+<div class="container">
     <div class="accordion"></div>
 
-</main>
+    <div id="player-container">
+        <div id="player"></div>
+    </div>
+    
+</div>
 
 <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-
 <script src="https://cdn.jsdelivr.net/npm/js-yaml/dist/js-yaml.min.js"></script>
+
 <script src="musiques.js"></script>
 <link rel="stylesheet" href="musiques.css">
+<script src="https://www.youtube.com/iframe_api"></script>
+
 
 </body>
 </html>
