--- a/Musique/musiques.html
+++ b/Musique/musiques.html
@@ -43,6 +43,7 @@
 
     <div id="player-container">
         <div id="player"></div>
+        <button id="nextButton">Suivant</button>
     </div>
     
 </div>
@@ -50,7 +51,9 @@
 <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/js-yaml/dist/js-yaml.min.js"></script>
 
-<script src="musiques.js"></script>
+<script src="js/generation.js"></script>
+<script src="js/musiques.js"></script>
+
 <link rel="stylesheet" href="musiques.css">
 <script src="https://www.youtube.com/iframe_api"></script>
 
