delete playlist element

--- a/Musique/musiques.html
+++ b/Musique/musiques.html
@@ -43,9 +43,13 @@
     <div class="accordion">
         <!-- Votre liste accordeon ici -->
     </div>
-    <div class="playlist" id="playlist">
-        <!-- Votre playlist ici -->
+    <div class="playlist-container">
+        <div class="playlist-header">Prochaines musiques</div>
+        <ul class="playlist" id="playlist">
+          <!-- List items will be dynamically generated here -->
+        </ul>
     </div>
+      
     
 
     <div id="player-container">
