--- a/Musique/musiques.html
+++ b/Musique/musiques.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Tuto Programmation">
+    <meta name="description" content="Ma bibliothèque de musiques">
     <meta name="author" content="Bastien Picco">
     <title>Musiques</title>
 
